spec/mermaid/er_diagram/021_parser_should_handle_zero-or-one-to-zero-or-one_relationships_20.error

Error: Parse error on line 1:
erDiagram\nA |o..o| B : has
---------^
Expecting 'EOF', 'SPACE', 'NEWLINE', 'title', 'acc_title', 'acc_descr', 'acc_descr_multiline_value', 'direction_tb', 'direction_bt', 'direction_rl', 'direction_lr', 'CLASSDEF', 'UNICODE_TEXT', 'CLASS', 'STYLE', 'ENTITY_NAME', got '\'
Parser3.parseError (/Users/mulgogi/.asdf/installs/nodejs/23.8.0/lib/node_modules/@mermaid-js/mermaid-cli/node_modules/mermaid/dist/mermaid.js:92578:28)
    at #evaluate (file:///Users/mulgogi/.asdf/installs/nodejs/23.8.0/lib/node_modules/@mermaid-js/mermaid-cli/node_modules/puppeteer-core/lib/esm/puppeteer/cdp/ExecutionContext.js:388:19)
    at async ExecutionContext.evaluate (file:///Users/mulgogi/.asdf/installs/nodejs/23.8.0/lib/node_modules/@mermaid-js/mermaid-cli/node_modules/puppeteer-core/lib/esm/puppeteer/cdp/ExecutionContext.js:275:16)
    at async IsolatedWorld.evaluate (file:///Users/mulgogi/.asdf/installs/nodejs/23.8.0/lib/node_modules/@mermaid-js/mermaid-cli/node_modules/puppeteer-core/lib/esm/puppeteer/cdp/IsolatedWorld.js:97:16)
    at async CdpJSHandle.evaluate (file:///Users/mulgogi/.asdf/installs/nodejs/23.8.0/lib/node_modules/@mermaid-js/mermaid-cli/node_modules/puppeteer-core/lib/esm/puppeteer/api/JSHandle.js:146:20)
    at async CdpElementHandle.evaluate (file:///Users/mulgogi/.asdf/installs/nodejs/23.8.0/lib/node_modules/@mermaid-js/mermaid-cli/node_modules/puppeteer-core/lib/esm/puppeteer/api/ElementHandle.js:340:20)
    at async CdpElementHandle.$eval (file:///Users/mulgogi/.asdf/installs/nodejs/23.8.0/lib/node_modules/@mermaid-js/mermaid-cli/node_modules/puppeteer-core/lib/esm/puppeteer/api/ElementHandle.js:494:24)
    at async CdpFrame.$eval (file:///Users/mulgogi/.asdf/installs/nodejs/23.8.0/lib/node_modules/@mermaid-js/mermaid-cli/node_modules/puppeteer-core/lib/esm/puppeteer/api/Frame.js:450:20)
    at async CdpPage.$eval (file:///Users/mulgogi/.asdf/installs/nodejs/23.8.0/lib/node_modules/@mermaid-js/mermaid-cli/node_modules/puppeteer-core/lib/esm/puppeteer/api/Page.js:450:20)
    at async renderMermaid (file:///Users/mulgogi/.asdf/installs/nodejs/23.8.0/lib/node_modules/@mermaid-js/mermaid-cli/src/index.js:266:22)
    at fromText (/Users/mulgogi/.asdf/installs/nodejs/23.8.0/lib/node_modules/@mermaid-js/mermaid-cli/node_modules/mermaid/dist/mermaid.js:153955:21)

