spec/mermaid/er_diagram/021_parser_should_handle_zero-or-one-to-zero-or-one_relationships_20.mmd
erDiagram\nA |o..o| B : has